Bug 209646 - Moon illumination percent incorrect
Summary: Moon illumination percent incorrect
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Akarsh Simha
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-06 17:29 UTC by David Houlden
Modified: 2009-10-06 19:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2009-10-06 17:29:31 UTC
Version:           1.5.3 (using KDE 4.3.1)
OS:                Linux

Today, 6th Oct 2009, "Whats Up Tonight" shows The moon as "Waning gibbous (77%)". If I right click on the moon in the star map and select "Details" it shows the illumination as 40%. Neither are correct.
KStars 1.2.9 on KDE 3.5.10 shows "Waning gibbous (91%)" and current illumination 93% which I believe are correct as verified by www.heavens-above.com.
Comment 1 Akarsh Simha 2009-10-06 18:13:51 UTC
Wow. Thanks for finding this really embarrassing bug!
Comment 2 Akarsh Simha 2009-10-06 18:19:35 UTC
I find that the % illumination keeps varying randomly upon repeated opening of the Details dialog, when the clock is running at least.

I wonder if Alexey had highlighted this earlier on the mailing list, so I'm putting him on copy.
Comment 3 Akarsh Simha 2009-10-06 19:14:41 UTC
SVN commit 1032026 by asimha:

Fixing a bug with the calculation of illuminated fraction of the
moon. The Phase was stored in degrees, but was multiplied by 180 / PI
instead of PI / 180 while converting it into radians!

BUG: 209646
CCMAIL: kstars-devel@kde.org



 M  +2 -2      ksmoon.cpp  
 M  +1 -1      ksmoon.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1032026
Comment 4 Akarsh Simha 2009-10-06 19:38:31 UTC
SVN commit 1032036 by asimha:

Backporting fix to bug #209646

CCMAIL: kstars-devel@kde.org
CCBUG: 209646



 M  +2 -2      ksmoon.cpp  
 M  +1 -1      ksmoon.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1032036