Fixing a bug with the calculation of illuminated fraction of the moon. The Phase was stored in degrees, but was multiplied by 180 / PI instead of PI / 180 while converting it into radians!

BUG: 209646
CCMAIL: kstars-devel@kde.org


svn path=/trunk/KDE/kdeedu/kstars/; revision=1032026